# MyKuiperLLama

./: .gitignore  CMakeLists.txt
demo/: CMakeLists.txt
kuiper/include/base/: alloc.h  base.h  buffer.h  cuda_config.h
kuiper/include/op/: add.h  embedding.h  encode.h  layer.h  matmul.h  mha.h  rmsnorm.h  rope.h  swiglu.h
kuiper/include/tensor/: tensor.h
kuiper/source/base/: alloc.cpp  alloc_cpu.cpp  alloc_cu.cpp  base.cpp  buffer.cpp  cuda_config.cpp
kuiper/source/op/: add.cpp  layer.cpp
kuiper/source/op/kernel/: kernel_interface.cpp  kernel_interface.h
kuiper/source/op/kernel/cpu/: add_kernel.cpp  add_kernel.h
kuiper/source/op/kernel/cuda/: add_kernel.cu  add_kernel.cuh
kuiper/source/tensor/: tensor.cpp
test/: CMakeLists.txt  test_main.cpp  utils.cu  utils.cuh
test/test_op/: test_op_add.cpp
test/test_tensor/: test_buffer.cpp  test_tensor.cpp
